--- a/2021/dokusyo_memo/08/0813_「Vue.js 入門 基礎から実践アプリケーション開発まで」 読書 継続236日.md
+++ b/2021/dokusyo_memo/08/0813_「Vue.js 入門 基礎から実践アプリケーション開発まで」 読書 継続236日.md
@@ -2,8 +2,8 @@
 
 「Vue.js 入門 基礎から実践アプリケーション開発まで」[川口 和也 (著), 喜多 啓介 (著), 野田 陽平 (著), 手島 拓也 (著), 片山 真也 (著))]を読んでいます。
 
-## ストアのモジュール分割
+### ストアのモジュール分割
 
-## Vuex ストアと Vue コンポーネント間の通信
+### Vuex ストアと Vue コンポーネント間の通信
 
-## Vuex と VueRouter の連携
+### Vuex と VueRouter の連携
