fix: 0830のメモを修正

--- a/2021/dokusyo_memo/08/0830_「UNIXという考え方」 読書 継続250日.md
+++ b/2021/dokusyo_memo/08/0830_「UNIXという考え方」 読書 継続250日.md
@@ -1,3 +1,9 @@
 # 0830\_「UNIX という考え方」 読書 継続 250 日
 
 「UNIX という考え方」を読みました。
+
+## 第８章 一つのことをうまくやろう
+
+### UNIX の考え方総括
+
+## 第９章 UNIX とその他のオペレーティングシステムの考え方
