add: メイクタイムメモを追加

--- a/2021/maketime_memo/09/0930_メイクタイム・メモ.md
+++ b/2021/maketime_memo/09/0930_メイクタイム・メモ.md
@@ -6,15 +6,25 @@
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+5
+
 ### チャージ
+
+5
 
 ### 戦術
 
 #### 今日試した戦術
 
+ワクチン摂取で試せなかった
+
 #### どうだったか？
+
+明日、明後日で回復したい
 
 #### 明日試したい（繰り返したい）戦術
 
