add: １日の終わりのメイクタイムメモを記述

--- a/2021/maketime_memo/10/01/1002_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/01/1002_メイクタイム・メモ.md
@@ -6,16 +6,30 @@ Laravel のテスト手法をためす
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+6
+
 ### チャージ
+
+6
 
 ### 戦術
 
 #### 今日試した戦術
 
+筋トレとランニングを再開した
+
 #### どうだったか？
+
+7 割 5 分ぐらい回復した
 
 #### 明日試したい（繰り返したい）戦術
 
+部屋の掃除
+
 ### 今日の感謝の瞬間
+
+健康に感謝
