--- a/2021/maketime_memo/10/01/1003_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/01/1003_メイクタイム・メモ.md
@@ -6,16 +6,36 @@ Laravel のテスト手法をためす
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
+
+6
 
 ### チャージ
 
+6
+
 ### 戦術
+
+筋トレ
+
+運動
+
+掃除
 
 #### 今日試した戦術
 
+掃除
+
 #### どうだったか？
+
+机の上が広くなった
 
 #### 明日試したい（繰り返したい）戦術
 
+スマホのアプリを整理する
+
 ### 今日の感謝の瞬間
+
+日曜日に勉強できる環境に感謝
