--- a/2021/maketime_memo/10/01/1004_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/01/1004_メイクタイム・メモ.md
@@ -6,16 +6,34 @@
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+7
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+ランニング
+
+筋トレ
+
+スマホアプリを片付ける
+
 #### どうだったか？
+
+スマホにきをとられない気がする
 
 #### 明日試したい（繰り返したい）戦術
 
+スマホアプリをさらに片付ける
+
 ### 今日の感謝の瞬間
+
+腰が痛くてもなんとか走れることに感謝
