--- a/2021/maketime_memo/10/02/1005_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/02/1005_メイクタイム・メモ.md
@@ -6,16 +6,36 @@
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+7
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+筋トレ
+
+ランニング
+
+スマホアプリの整理
+
 #### どうだったか？
+
+運動すると、頭がスッキリする
+
+スマホで Twitter を一度も開かなかった
 
 #### 明日試したい（繰り返したい）戦術
 
+机の上を掃除する
+
 ### 今日の感謝の瞬間
+
+腰が痛くてもなんとかなった
