add: 終わりのメイクタイム・メモを追加

--- a/2021/maketime_memo/10/02/1006_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/02/1006_メイクタイム・メモ.md
@@ -1,4 +1,4 @@
-## 1005\_メイクタイム・メモ
+## 1006\_メイクタイム・メモ
 
 ### 今日のハイライト
 
@@ -6,16 +6,34 @@
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+7
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+筋トレ
+
+自転車で外周
+
+机の上を片付ける
+
 #### どうだったか？
+
+机の上が広くなった
 
 #### 明日試したい（繰り返したい）戦術
 
+部屋に掃除機をかける
+
 ### 今日の感謝の瞬間
+
+ojt 期間を無事に終えたことに感謝
