--- a/2021/maketime_memo/10/02/1008_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/02/1008_メイクタイム・メモ.md
@@ -6,16 +6,34 @@
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+6
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+筋トレ
+
+ランニング
+
+部屋の掃除
+
 #### どうだったか？
+
+部屋がすっきりした
 
 #### 明日試したい（繰り返したい）戦術
 
+スマホのアプリを整理する
+
 ### 今日の感謝の瞬間
+
+Go の案件にアサインされた
