add: 終わりのメイクタイムメモを追加

--- a/2021/maketime_memo/10/02/1009_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/02/1009_メイクタイム・メモ.md
@@ -6,16 +6,32 @@
 
 ### ハライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+6
+
 ### チャージ
+
+6
 
 ### 戦術
 
 #### 今日試した戦術
 
+特に試せていない
+
 #### どうだったか？
+
+睡眠不足であまり集中できなかった
 
 #### 明日試したい（繰り返したい）戦術
 
+運動
+
+十分な明日睡眠
+
 ### 今日の感謝の瞬間
+
+知人に会えるようになったことに感謝
