--- a/2021/maketime_memo/10/02/1010_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/02/1010_メイクタイム・メモ.md
@@ -6,11 +6,21 @@ Laravel の個人開発
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
+
+6
 
 ### チャージ
 
+6
+
 ### 戦術
+
+ランニング
+
+筋トレ
 
 #### 今日試した戦術
 
@@ -19,3 +29,5 @@ Laravel の個人開発
 #### 明日試したい（繰り返したい）戦術
 
 ### 今日の感謝の瞬間
+
+腰が治ったことに感謝
