add: 1013のメイクタイム・メモを追加

--- a/2021/maketime_memo/10/03/1013_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/03/1013_メイクタイム・メモ.md
@@ -6,16 +6,30 @@ MVP を作る
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
+
+7
 
 ### チャージ
 
+7
+
 ### 戦術
+
+散歩
 
 #### 今日試した戦術
 
+散歩
+
 #### どうだったか？
+
+リフレッシュした
 
 #### 明日試したい（繰り返したい）戦術
 
 ### 今日の感謝の瞬間
+
+常に新しい人と喋れる環境に感謝
