add: 1014のメイクタイムメモをういか

--- a/2021/maketime_memo/10/03/1014_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/03/1014_メイクタイム・メモ.md
@@ -6,16 +6,38 @@ MVP を作る
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
+
+7
 
 ### チャージ
 
+7
+
 ### 戦術
+
+筋トレ
+
+ランニング
 
 #### 今日試した戦術
 
+筋トレ
+
+ランニング
+
 #### どうだったか？
+
+リフレッシュできた
 
 #### 明日試したい（繰り返したい）戦術
 
+筋トレ
+
+ランニング
+
 ### 今日の感謝の瞬間
+
+ボーナスをみれたことに感謝
