--- a/2021/maketime_memo/10/03/1016_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/03/1016_メイクタイム・メモ.md
@@ -6,16 +6,30 @@ MVP を作る
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+7
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+部屋の掃除
+
 #### どうだったか？
 
+明日を楽しく迎えられそう
+
 #### 明日試したい（繰り返したい）戦術
+
+筋トレ
+
+ランニング
 
 ### 今日の感謝の瞬間
