--- a/2021/maketime_memo/10/04/1018_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/04/1018_メイクタイム・メモ.md
@@ -6,15 +6,27 @@
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+7
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+ランニング
+
+筋トレ
+
 #### どうだったか？
+
+リフレッシュ
 
 #### 明日試したい（繰り返したい）戦術
 
