--- a/2021/maketime_memo/10/04/1021_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/04/1021_メイクタイム・メモ.md
@@ -1,4 +1,4 @@
-# 1021\_メイクタイム・メモ
+# 1022\_メイクタイム・メモ
 
 ### 今日のハイライト
 
@@ -6,16 +6,26 @@ MVP を作る
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+6
+
 ### チャージ
+
+6
 
 ### 戦術
 
 #### 今日試した戦術
 
+特になし
+
 #### どうだったか？
 
 #### 明日試したい（繰り返したい）戦術
+
+筋トレ
 
 ### 今日の感謝の瞬間
