add: メイクタイム・メモ

--- a/2021/maketime_memo/10/04/1025_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/04/1025_メイクタイム・メモ.md
@@ -1,21 +1,33 @@
-# 1024\_メイクタイム・メモ
+# 1025\_メイクタイム・メモ
 
 ### 今日のハイライト
 
-徳丸本勉強会
+徳丸本の勉強
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+7
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+ランニング
+
 #### どうだったか？
+
+頭がスッキリした
 
 #### 明日試したい（繰り返したい）戦術
 
 ### 今日の感謝の瞬間
+
+ランニングできる体に感謝
