--- a/2021/maketime_memo/10/04/1026_メイクタイム・メモ.md
+++ b/2021/maketime_memo/10/04/1026_メイクタイム・メモ.md
@@ -1,20 +1,32 @@
-# 1025\_メイクタイム・メモ
+# 1026\_メイクタイム・メモ
 
 ### 今日のハイライト
 
-徳丸本の勉強
+特になし
 
 ### ハイライトの時間をつくれたか
 
+Yes
+
 ### レーザー
 
+7
+
 ### チャージ
+
+7
 
 ### 戦術
 
 #### 今日試した戦術
 
+筋トレ
+
+ランニング
+
 #### どうだったか？
+
+仕事後に頭がスッキリした
 
 #### 明日試したい（繰り返したい）戦術
 
