--- a/2021/dokusyo_memo/11/03/1117_「SQLアンチパターン」 読書 継続330日.md
+++ b/2021/dokusyo_memo/11/03/1117_「SQLアンチパターン」 読書 継続330日.md
@@ -13,10 +13,14 @@
 3. 入れ子
 4. 閉包テーブル
 
-## ID リクワイアド
+## 3 章 ID リクワイアド
 
 とりあえず ID（ID リクワイアド）はやめろ
 
 中間テーブルに ID はいらない
 
 id を"id"のままつけるのではなく、テーブルに沿った名前をつける（Bugs テーブルには bugs_id とか）
+
+## 4 章 キーレスエントリ（外部キー嫌い）
+
+外部キーを嫌うことは、それ以上の手間や借金を背負うことになる
