--- a/2021/dokusyo_memo/11/04/1127_「SPRINT 最速仕事術――あらゆる仕事がうまくいく最も合理的な方法」 読書 継続339日.md
+++ b/2021/dokusyo_memo/11/04/1127_「SPRINT 最速仕事術――あらゆる仕事がうまくいく最も合理的な方法」 読書 継続339日.md
@@ -1,4 +1,4 @@
-# 1126\_「SPRINT 最速仕事術――あらゆる仕事がうまくいく最も合理的な方法」 読書 継続 338 日
+# 1127\_「SPRINT 最速仕事術――あらゆる仕事がうまくいく最も合理的な方法」 読書 継続 339 日
 
 ## FRIDAY テストする
 
@@ -19,3 +19,21 @@
 3. プロトタイプを紹介する
 4. 「タスクと促し」でプロトタイプに対する反応を見る
 5. 「簡単なデブリーフィング（ふりかえり）」で全体的な考えや印象を聞く
+
+### 第 17 章 「学習」する
+
+事件を「解明」する
+
+全員「同時」に観察、学習する
+
+「いい」「悪い」「どちらでもない」のメモをとる
+
+「現実の人」に意味のあるものをつくる
+
+### おわりに 「仕事のやり方」が根本的に変わる
+
+- 焦っていきなりソリューションを考えようとせず、じっくり問題を洗い出し、ターゲットを定める
+- アイデアを大声で出し合うより、各自でソリューションをくわしくスケッチする。集団ブレインストーミングは効果がないが、もっといい方法がある
+- 抽象的な議論や長ったらしいギロはやめる
+- 「ファザード」と「プロトタイプ」思考
+- 莫大なコストと時間をかけてアイデアを開発し「正しく軌道に載っているか」ではなく、ターゲット顧客と一緒にプロトタイプをテストし、正直な反応を観察する
