fix: タイトルを修正

--- a/2021/tech_memo/11/04/1128_Webアプリ・プログラミング学習メモ(継続 340日目).md
+++ b/2021/tech_memo/11/04/1128_Webアプリ・プログラミング学習メモ(継続 340日目).md
@@ -1,9 +1,13 @@
-# 1129_Web アプリ・プログラミング学習メモ(継続 339 日目)
+# 1128_Web アプリ・プログラミング学習メモ(継続 340 日目)
 
 ## 今日取り組んだこと
 
 - 勉強会の予習
+
   - 徳丸本
+  - ユースケース駆動開発実践ガイド
+
+- 勉強会
   - ユースケース駆動開発実践ガイド
 
 ## 今後取り組むこと
