--- a/2022/dokusyo_memo/04/0122_「マネジメント」 読書 継続395日.md
+++ b/2022/dokusyo_memo/04/0122_「マネジメント」 読書 継続395日.md
@@ -1,1 +1,49 @@
 # 0122\_「マネジメント」 読書 継続 395 日
+
+# マネジメントの役割
+
+1. 自らの使命を果たすため
+2. 仕事を通じて働く人たちを生かす
+3. 自らが社会に与える影響を処理すると共に、社会の問題について貢献する
+
+利益とは
+
+1. 利益は成果の判定基準である
+2. 利益は不確定性というリスクに対する保険である
+3. 利益はよりよい労働環境を生むための原資である
+4. 利益は、医療、国防、教育、オペラなど社会的なサービスと満足をもたらす原資である
+
+# 5 戦略計画
+
+戦略計画とは
+
+1. リスクを伴う企業的な意思決定を行い
+2. その実行に必要な活動を体系的に組織し、
+3. それらの活動の成果を期待したものと比較測定するという連続したプロセス
+
+# 10 仕事と労働
+
+仕事の論理と労働の力学の双方に従ってマネジメントしなければんらない
+片方が成功しても片方が失敗すれば全体は失敗である
+
+# 11 仕事の生産性
+
+仕事を生産的なものにするには、４つのものが必要である
+
+1. 分析である
+2. 総合である
+3. 管理である
+4. 道具である
+
+# 12 人と労働のマネジメント
+
+X 理論と Y 理論
+X 理論は怠惰であると想定し、Y 理論は働くことで自己実現と責任を欲する
+
+# 13 責任と保証
+
+働きがいを与えるには、仕事そのものに責任を持たせなければならない
+
+1. 生産的な仕事
+2. フィードバック情報
+3. 継続学習
