--- a/2022/dokusyo_memo/01/05/0129_「絵で見てわかるOS・ストレージ・ネットワーク 新装版」 読書 継続403日.md
+++ b/2022/dokusyo_memo/01/05/0129_「絵で見てわかるOS・ストレージ・ネットワーク 新装版」 読書 継続403日.md
@@ -1,1 +1,176 @@
 # 0129\_「絵で見てわかる OS・ストレージ・ネットワーク 新装版」 読書 継続 403 日
+
+## 第 4 章 アーキテクチャから学ぶストレージの基本と使い方
+
+### ディスクのアーキテクチャ
+
+- シーケンシャルアクセス
+  - RDBMS の表のフルスキャン
+- ランダムアクセス
+  - さまざまな箇所にある少量のデータを「頭出し（シーク）」してポンポイントで読み書きするアクセスのこと
+
+あまりかわらない
+
+I/O = シーク時間+回転待ち時間+データ転送時間
+
+1000（ミリ秒） / 頭出ししの時間= ハードディスク IOPS
+だいたい、1 回の I/O にかかる時間は 5 ミリ秒から 10 ミリ秒
+
+#### SSD
+
+Solid State Drive
+
+HDD は円盤、SSD は NAND と呼ばれる種類のフラッシュメモリの集合体を核とした記憶装置
+
+NAND 型フラッシュメモリの消去、書き込み、読み出し操作
+
+書き換え動作
+
+1. ブロックの読み取り
+2. ブロックの退避
+3. ブロックの消去
+4. 退避先のブロックをページ単位で書き換え
+5. ブロックの書き戻し
+
+読み込み動作
+
+1. ページ単位での読み込み
+
+### 4.2 ストレージのインターフェース
+
+#### ATA
+
+AT Attachemend
+
+IDE とも呼ばれる規格
+
+ある程度以上のサイズの DB には不向き
+
+ATA の伝送方式はパラレル（並列）、シリアルにしたものが SATA
+
+#### 4.2.2 サーバー全般に適した SCSI
+
+Small Computer SystemInterface スカジー
+小規模なストレージ用に用いられている
+
+SAS（Serial Attached SCSI）
+
+#### 4.2.3 iSCSI
+
+iSCSI（Internet Small Computer System Interface）
+TCP/IP に対応した SCSI プロトコルのこと
+
+#### 4.2.4 disconnect と reconnect
+
+I/O は時間がかかる処理が入る時に既存のパスを手放す、終わったら再度通信をおこなう
+
+#### 4.2.5 大規模ストレージに対応する FC
+
+FC（FiverChannel：ファイバーチャネル）は、大規模なストレージに対応できる規格
+
+#### 4.2.6 FoE
+
+FC をイーサネットに対応させた規格
+iSCSI との違いは、TCP/IP ではなく FC のプロトコルをベースにした CEE というプロトコルで通信をおこなうこと、そして最低の基準とされている LAN ケーブルの回線速度が高速であること。
+
+#### 4.2.7 HBA
+
+ストレージを接続するのに、ホスト側には HBA（Host Bus Adapter：ホストバスアダプタ）と呼ばれるアダプタが必要
+
+## 4.3 SAN と NAS はどこがどう違うのか？
+
+SAN（Storage Area Network）
+
+NAS（Network Atthach Storage） ネットワークに接続されたストレージ
+
+- 物理構成
+- ファイルシステムの位置
+- 上位プロトコル
+
+### 4.3.1 SAN と NAS の物理構成の違い
+
+SAN では FC、NAS では通常のネットワークを使う
+
+### 4.3.2 SAN と NAS のファイルシステムの位置
+
+NAS の場合、NAS サーバー（ストレージ）がファイルシステムを持つ
+
+### 4.3.3 SAN と NAS の上位プロトコル
+
+NAS では、NFS や CIFS（SMB）といったプロトコルがネットワーク上に流れる
+
+## 4.4 複数のディスクを組み合わせて信頼性を高める RAID
+
+### 4.4.1 RAID 0
+
+RAID0 は冗長性がない
+データを一定の大きさごとに、複数のディスクに順番に割り振るように動作する
+頭出しに時間がかかる
+
+### 4.4.2 RAID 1
+
+RAID1 はミラーリング
+
+### RAID 5
+
+RAID5 はパリティという仕組みで、ディスクが故障してもデータが失われない
+RAID1 と比べて、効率がよい
+
+write 時に動作が増える
+
+1. 書き込み前のデータとパリティデータを読み込む
+2. パリティデータを算出する
+3. データおよび更新後のパリティをディスクに書き込む
+
+### RAID 6
+
+パリティを別方法で算出したものと多重化する方式。
+2 台のディスクが故障した場合でもデータを復旧できる
+
+### RAID 1+0
+
+RIAD0 と RAID1 を組み合わせたもの
+ストライプによって I/O を効率化させ、RAID1 によってミラー化による信頼性向上をおこなう
+
+### RAID の性能
+
+## 4.5 物理的な複雑さを隠蔽するストレージの仮想化
+
+ストレージの物理そうを意識させない（隠蔽する）形で取り入れられてきたのがストレージの仮想化
+アプリケーションや DBMS からはローカルなストレージのように見える
+
+### 4.5.1 シンプロビジョニング
+
+OS に対してストレージ装置に搭載されている実際の容量以上のサイズを見せることができる
+
+## 4.6 ストレージにはどんな障害があるのか
+
+## 4.7 同期 I/O と非同期 I/O
+
+同期 I/O とは、I/O が終わるまでは次の処理をプロセスやスレッドが行うことができない I/O のこと
+非同期 I/O は、I/O が終わらなくても次の処理を行うことができる I/O のこと
+
+## 4.8 書き込み I/O と同期書き込み（書き込みの保証）
+
+同期書き込みとは、書き込みの保証がされている書き込みのこと
+同期書き込みは、アプリケーションや DBMS が OS に対するシステムコールで指定するものであるため、特にユーザーが気にする必要はない
+
+## 4.9 ライトキャッシュが効果的なアプリケーションとは?
+
+## 4.10 ファイルシステム
+
+### 4.10.1 ファイルシステムの仕組み
+
+まず、「ブロック」ディスクをある単位に区切ること
+次に、サイズ変更を自由にできるようにするために、ブロックを自由に追加できる構造にする
+
+### 4.10.2 ファイルシステムの保全性
+
+### 4.10.4 VFS
+
+VFS とは、UNIX 系 OS で使われる仮想ファイルシステムのこと
+
+### 4.10.5 VHD
+
+VHD（Virutal Hard Disk）仮想 HDD フォーマットの一つ。
+Microsoft が提供するフォーマット（VMware や Virutalbox でも採用できるため、標準な仮想 HDD と言える）
