fix: 「OSS セキュリティ技術の会　第 10 回勉強会」に参加したことを追加

--- a/2022/study_memo/02/02/0209_勉強メモ 継続414日.md
+++ b/2022/study_memo/02/02/0209_勉強メモ 継続414日.md
@@ -1,3 +1,276 @@
 # 0209\_勉強メモ 継続 414 日
 
 - IDDD 本勉強会予習
+- 「OSS セキュリティ技術の会　第 10 回勉強会」に参加
+
+## 会の設立背景
+
+2006 年ぐらい SELinux につちえやっていた
+
+2016 年末ぐらい
+SELinux は相変わらず OFF のまま、第 6 章を担当
+
+奥裏さん
+
+6,7 章を担当セキュリティ技術がもりあがる、SELinux の技術は使われる
+
+なので、設立を 2017 年に決意
+
+- 技術ジャンル
+  - カーネルせきゅりてぃ、anti virus パッチ管理
+  - 認証周り OSS：keycloak、freeIPA
+
+勉強会を 9 回開催
+
+情報処理学会や OSC 等-> CSS でセッション予定
+
+最近は Keycloak 周り
+
+Keycloak の入門書の著者で、書籍の中からテーマを紹介する
+
+日立製作所 OSS ソリューションセンタ
+
+## Keycloak で API 認可に入門する
+
+### 1. Keycloak とは
+
+Web ベースのシステムが前提
+
+認証と認可の説明
+
+1. 認証 誰かを確認
+2. 認可 アクセス権を与える
+3. 認可判断（Authorazation Decision） 権限の確認
+
+Keycloak とは
+
+- OSS の「IAM」のソフトウェア
+- コミュニティが活発・オープンで商用利用が広く進んでいる
+- 最新標準にも対応
+- 豊富な機能
+
+Keycloak でできること
+ユースケース 1 Oauth2.0 の枠組みに**適切に従った**「API 認可」
+ユースケース 2 クレデンシャルの入力は一度だけ「SSO」
+ユースケース 3 外部のクレデンシャルや認証システムとの連携
+
+Keycloak の構成
+Java の上でのアプリケーションサーバーで動く
+Java （JSK 8 以上）が入っていれば動く
+
+レルム
+レルムとは Keycloak の管理単位、ユーザーなどの情報はレルム単位で管理
+
+## 2. API 認可の基礎
+
+API 認可とは、API 呼び出しを行う際の認可
+
+API 認可では、「OAuth2.0」が広く使われている
+
+- OAuth2.0 portected resource へのアクセスを外部へ認可する
+
+登場人物
+
+1. リソースサーバー
+2. クライアント
+3. 認可サーバー（Keycloak）
+4. リソースオーナー（ブラウザ）
+
+アクセストークンをクライアントに発行する
+クライアントはリソースサーバーにトークンを提示する
+トークンをもとに認可判断
+
+スコープが関連づけられている
+
+アクセストークン発行フロー
+
+認可コードフロー
+
+アクセストークン
+アクセストークンの形式は任意（OAuth では）だが Keycloak では JWS を採用
+ヘッダー、ペイロード（JWT）、署名
+
+リフレッシュトークン
+アクセストークンには有効期限があり、短くすることが推奨
+リフレッシュトークは長い期限
+クライアントはリフレッシュトークンを使えばアクセストークンを再取得できる
+
+トークンの無効化
+
+- 有効期限内であっても、アクセストークンやリフレッシュトークは無効にすることができる
+- Keycloak
+
+リソースサーバーでのアクセストークンの扱い
+
+- ローカルでの検証（署名のチェックなど）->無効化を即座にできない
+- トークンイントロスペクション -> 無効化を即座に検知できる
+
+OIDC（OpenID Connect）
+
+OAuth2.0 を拡張した「認証」のためのプロトコル
+登場人物の名前がかわる
+ID トークンというトークンが追加される
+
+### 3. Keycloak の基本概念
+
+様々な用語の理解することが必要
+
+クライアント
+
+- 認証・認可サーバーである Kecloak のサービスを理解するアプリケーションのこと
+
+セッション
+
+Keycloak ではログインが成功するとセッションが生成され、メモリー上で管理
+
+### 4. API 認可を Keycloak で試す
+
+サンプルアプリをためす
+
+1. 検証観賞を構築する
+
+今回実現するもの -> 認可コードフローでアクセストークンを取得し API を呼び出すための検証環境
+
+https://github.com/keycloak-book-jp/keycloak-book-jp
+
+16 系でも動く
+
+クライアントとリソースサーバー
+mvn が必要
+5 章
+
+keycloak で動く OAuth の仕組みを可視化したアプリが動く-> ソースコードベースじゃなければ理解するのに、最適かも
+
+2. 検証に必要な設定をする
+
+レルムの追加、ユーザーの追加
+
+質問
+
+Q. 杉本
+
+Oauth2.0 の枠組みに**適切に従った**「API 認可」が可能とのことですが、違反した使い方ができないようになっているということでしょうか？
+
+中村さん 19:15
+OAuth2.0 に従ったリクエストを受け付け、レスポンスを返しますので、OAuth2.0 に従った形で使うことになると思います。
+しかし、OAuth は自由度が高いため、安全でない使い方ができてしまいます。安全な使い方を定めたセキュリティプロファイル(有名なのは FAPI)というのがありまして、それに従う必要があります。
+Keycloak には、Client Policies という機能があり、それを使うことで FAPI 対応できます。
+参考 ↓
+https://thinkit.co.jp/series/10313
+
+## 3. Keycloak で SSO に入門する
+
+和田さん
+
+第 3 章、第 6 章を担当
+
+奥裏さん
+
+6,7 章を担当
+
+SSO とは、一度のログインで複数のアプリケーションやサービスに対してアクセス可能になる特性や機能のこと
+
+メリット
+
+- 利用者
+  - １つのユーザ ID とパスワードの組み
+  - 一度ログインするだけで複数のアプリケーションを利用可能になる
+- 管理者
+  - パスワードの管理箇所、認証箇所を 1 ヶ所に集約でき、アタックサーフェス（攻撃対象領域）を少なくできる
+  - 認証強度は１ヶ所のみあげるだけですむ
+  - アプリごとにパスワード忘れ対応といったヘルプデスク運用の負荷軽減
+
+SSO は新しいものではない
+
+- Active Directory ドメインの認証などで使われる Kerberos はむかしから
+- Keycloak は Web 特化
+
+（web）SSO の実現方法
+シンプルな Cookie ベースのやり方/オレオレ SSO（2000 年代）
+
+異なるドメイン間での SSSO
+
+認証連携の標準プロトコル（SAML/OIDC）をカツオ用した SSO
+
+SSO の仕組み
+
+なんらかの方法で認証結果をアプリケーションに連携することで SSO を実現
+安全な方法で認証結果をアプリケーションに渡す標準的な槍亜 k 田をさだめたもの->OIDC、SAML
+
+SAML の代表的なフロー（HTTP POST Binding）
+
+- アプリ（SP）と認証サーバー（Idp）間は直接通信しない
+- ブラウザー経由で認証結果お w 直接連携する
+- 認証結果として「SAMP アサーション」を Idp から SP に渡す
+- SP では SAML アサーションをけんしょうしつつ、含まれているユーザ識別子を利用
+
+OIDC の代表的なフロー（認可コードフロー）
+
+- アプリケーション（RP：Relying Party）と認証サーバー（OP）間は直接通信あり
+- ブラウザを経由せず、サーバー間通志で認証結果をうけとる
+- 認証結果として「ID トークン」を OP から RP に渡す
+- RP では ID トークンを検証しつつ、含まれているユーザ識別子を利用してユーザ特定して SSO を行う
+
+SAML と OIDC
+
+- 認証リクエスト：SAML リクエスト/OIDC 認証リクエスト
+- 認証結果：SAML アサーション/ID トークン
+- アプリケーション-認証サーバー間の直接通信あり・なしは、実は SAML・OIDC の双方で方式が用意されている
+- ただし、紹介 s 田代表的なフローがよく使われる
+
+Keycloak
+
+- SAML/OIDC の両方に対応した認証サーバー（代表的ではないふろーにも対応）
+- Kecycloa アプリケーション間の SSO だけでなく、外部の認証サーバーとの SSO にも対応
+
+アプリケーション側の SSO 対応
+
+認証サーバーは Keycloak におまかせ、アプリケーション側：???
+
+ライブラリーを利用
+
+- アプリ内で OIDC/SAML 対応のライブラリーを使用して実現する
+- ライブラリーが OIDC/SAML で必要なメッセージを組み立て、アサーションの検証
+
+リバースプロキシーを利用
+
+- リバースプロキシーサーバーにて OIDC/SAML による SSO を実装
+
+デモ
+
+Keiichi Nakamura 19:25
+keycloak は頻繁にバージョンアップしているようで、運用はどうしているのかが気になっています。評価済みのバージョンを使い続けるのか、バージョンアップに追従しないといけないのか。追従していくとなると、再評価やバージョンアップ作業で、コストがかかりそうと感じでいます。
+
+中村さん 19:34
+　ユーザーさんの方針に依存するとは思います。コミュニティウォッチしてると、毎度 vup に追随している方々もいるようですが、大変と想像されますね。。
+　あとは、Red Hat SSO という、特定バージョンの keycloak を Red Hat 社が検証し、しばらくはセキュリティパッチをバックポートし、vup も検証されているものを使う手もあります。ただ有償です。
+
+noah 19:19
+KeyCloak の各エンドポイントはクライアント ID/シークレットだけで守られている感じですか?
+クライアント ID とシークレットが漏れたら誰でもクライアントになりすませると少し心配に思います
+
+中村さん 19:23
+こちらは、Keycloak に限らず、OAuth2.0/OIDC などの標準に定められた方式になります。
+ただ、クライアント認証方式は標準で他の方式も定められています。Keycloak はクライアント証明書を使った認証などにも対応しています。
+
+書籍においてシングルサインアウトに関する記述はありますか？
+
+和田さん 19:44
+はい、シングルサインアウトの解説もあります。サンプルアプリケーションでも利用しています。
+
+匿名出席者 19:51
+client ID は任意の文字列で良いのでしょうか？
+
+和田さん 19:56
+はい、クライアント ID は Keycloak にクライアント登録する際に自分で任意の値を設定します（client Secret は Keycloak が自動生成します）。なお、SAML 用のクライアントの場合は SP 側の情報を入れる必要がありますが、メタデータ XML を読ませると自動設定されます。
+
+所感
+勉強会について
+OAuth、OIDC、SAML を一通り振り返れた
+keycloak が IAM 領域なら、なんでもできそうに感じた
+デモアプリもあるのも再現性があってよかった。
+デモは予習なしだと理解しづらかったので、録画をみたい
+発表資料が書籍をいい感じにまとめていそうだったので
+本について（4 章ぐらいまで読んで）
+「OAuth 徹底入門」は微妙な日本語訳とか独特な言い回しとか冗長な文章構成が難点だったので、OAuth、OIDC、SSO を学ぶなら「Keycloak 入門」の方が良書に感じた
+「OAuth 徹底入門」は Node.js のアプリが読むのが難しくない構成で作られていたので実装学びたいなら「OAuth 徹底入門」
