--- a/2022/dokusyo_memo/02/02/0210_「失敗から学ぶ RDB の正しい歩き方」 読書 継続415日.md
+++ b/2022/dokusyo_memo/02/02/0210_「失敗から学ぶ RDB の正しい歩き方」 読書 継続415日.md
@@ -1,8 +1,6 @@
 # 0210\_「失敗から学ぶ RDB の正しい歩き方」 読書 継続 415 日
 
-## 第 10 章
-
-転んだ後のバックアップ第 9 章第 8 章　 JSON の甘い罠
+## 第 8 章　 JSON の甘い罠
 
 すべての値を JSON として保存したことによるアンチパターン。
 スキーマレスで変化に柔軟な設計ができるが、検索複雑性が上がったり、更新のコストがあがったりする。
@@ -63,9 +61,8 @@ DOMAIN に似た ENUM 型
 アンチパターンのポイント
 強すぎる制約は RDBMS 特有の問題であり、しかし安易に避けるとより悩ましい問題を生み出す
 
-## 第 10 章
+## 第 10 章 転んだ後のバックアップ
 
-転んだ後のバックアップ
 バックアップの方法を適切に覚えること
 
 - 論理バックアップ
