--- a/2022/study_memo/02/03/0218_勉強メモ 継続423日.md
+++ b/2022/study_memo/02/03/0218_勉強メモ 継続423日.md
@@ -3,3 +3,163 @@
 - go で Entity を表現する実装
 - IDDD 勉強会予習
 - RDRA 勉強会
+
+## 導入
+
+RDRA
+
+狙い
+
+- 要件定義は「決める」肯定
+- 決めるための仕組みを体感する
+  - 今回は Google Sheets を使用
+- モデリング
+  - 爆然とした形にする
+
+本日の対象
+ビジネスが成立していない -> ビジネスの仕組みを考える
+ビジネスが成立している -> ビジネスを支えるの仕組みがある
+
+## RDRA の説明
+
+#RDRA
+
+RDRA の構造
+したから上に依存がある
+
+- システム価値 要求、アクター、外部システム
+- システム外部環境 業務、ビジネスユースケース、業務フロー、アクティビティ、条件、バリエーション
+- システム境界 ユースケース、画面、イベント
+- システム 情報、状態
+
+イベントは外部システムとつながる
+ユースケースは単位
+
+## スプレッドシートの説明
+
+9 つのシート、機能要求と非機能要求は使わない
+頭の中では関係性を意識する
+
+BUC シートに業務、BUC、アクティビティ、UC などを記述する
+アクティビティに会員では画面を使う -> ユースケースがない
+
+条件のシートはバリエーション、状態モデルと関連している状態ののか意識する
+条件にはバリエーションと状態モデルの組み合わせ
+
+状態シート、には状態モデル、状態、状態 UC、状態遷移
+
+アクターシートには分類とアクター名を書く
+
+## ワークの説明
+
+Optro を書く
+
+19:18~19:25 の間以下の分析
+
+- このビジネスは
+
+  - アクターの関心に関わる
+  - 関わる個人、会社は？
+  - 時や（Optoro）の業務は？
+  - 扱う情報は？
+  - 関心のある状態は？
+
+- アクター
+  - 一時購入者、二じ購入者
+  - 大手小売、倉庫、修理業者、Optoro, Inc.、再販サイト
+- 個人
+  - 一次購入者、二次購入者
+- 会社
+  - 大手小売、倉庫、修理業者、Optoro, Inc.、再販サイト
+- 扱う情報
+  - 商品の状態（再販、リサイクル、破棄、寄付）
+  - 再販
+  - 修理
+  - 購入
+  - 支払い
+  - 返品
+  - 在庫
+
+## ハンズオン 1
+
+- アクターを探す
+- 外部システムを探す
+- 業務の単位を探す
+  - 点線で囲われた箇所に業務として名前をみる
+  - 大手小売-倉庫
+  - 倉庫-修理業者
+  - Optitune-再販サイト
+  - 再販サイト-Optoro,Inc.
+- 業務を分解を考える
+  - BUC の洗い出し
+    - BUC の価値・責務は？
+    - その BUC は何ができたらいいの？
+
+## ハンズオン 2
+
+- バリエーション
+  - 商品にはどんな種類があるの?
+  - どんな種類の会社がありますか？
+  - 条件の軸に結びつきやすい
+- 情報
+  - 関わるアクター、外部システムはどのような情報で仕事をしているのか?
+  - 情報を洗い出す
+- 状態
+
+  - わざわざ ID で管理するする必要はなに？
+  - アクションに結びつきやすい
+
+- 人がアクションを取るために参照するのが、情報
+- 人がアクションを取るために参照するのが、情報
+
+  情報は「when に what に how したよ」。情報を操作することで状態がかわる
+  あるユースケースで情報を操作することで、状態が別の状態に遷移すること
+
+バリエーションは早い段階ででる
+
+:memo: 一般論としては、バリエーションはポンチ絵レベルでだしやすい。そのあと、情報レベルでだして、そこから 状態煮出すことが多い
+
+BUC は難しい
+
+## 休憩
+
+質問：業務と BUC の粒度の違いがよく掴めませんでした。
+システムが小さいとかわらない
+
+:memo: より大規模になるとアクターが同一業務でもわかれることがあるので、BUC がより細かくなる（かもしれない
+大規模になりすぎてしまう
+
+## ハンズオン 3 仕事の組み立て
+
+- アクティビティ
+  - BUC の一連の流れを確認
+- ユースケース
+  - システムとの関係をユースケースで表現
+
+アクティビティと UC は同じになりがち
+PC を使うところと使わないところわける
+
+## ハンズオン 4 システムを組み立てる
+
+- アクターとの関係
+  - そのシステムに誰が関わるのか?
+  - 画面-アクター
+- 外部システム
+
+  - その外部に関わる外部システムは?
+  - イベント-外部システム
+
+- 情報
+  - 情報をつなげて意味を語る
+  - UC と情報をつなげる
+- 状態
+  - 状態を遷移させる
+  - 遷移を UC に
+
+業務、BUC、アクティビティを省いて UC のみを書くのは不都合ありますか？
+一人（説明する人がいない）なら大丈夫
+
+状態は遷移前と遷移後を考える
+遷移前と遷移先を考えると、抜け漏れなどが見えてくる
+
+参照シートを頑張るとよさそう
